correction to modal with form spacing

--- a/src/components/modal/_modal.scss
+++ b/src/components/modal/_modal.scss
@@ -125,8 +125,7 @@
     margin-bottom: 0;
     padding-right: rem(10);
     @include media-breakpoint-up(md) {
-      flex: 0 1 auto;
-      width: 66%;
+      flex: 1 1 auto;
     }
     .label-text {
       margin-bottom: rem(3);
@@ -139,8 +138,7 @@
     @extend %button;
     margin-bottom: 0;
     @include media-breakpoint-up(md) {
-      flex: 0 1 auto;
-      width: 34%;
+      flex: 0 0 auto;
     }
   }
 }
